<resources>
    <string name="app_name">RealmNotesApp</string>
    <string name="add">Add</string>
    <string name="enter_title">Please enter a title…</string>
    <string name="enter_description">Enter description here…</string>
    <string name="save_note">Save Note</string>
    <string name="id">id</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="note_success">Note added successfully</string>
    <string name="result_empty">You do not have any notes. Add some if you wish!</string>
    <string name="notification">Notification</string>
    <string name="hold_button">Hold the button to add a new note!</string>
    <string name="cancel">Cancel</string>
</resources>