<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/app_name"
                android:background="@android:color/white"
                android:fontFamily="@font/futurabook"
                android:hint="@string/enter_title"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description_edit_test"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/app_name"
                android:background="@android:color/white"
                android:fontFamily="@font/futurabook"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/save_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
