<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/id_text_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_margin="30dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/futura_book"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/id"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="40dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_corners_text_view"
                android:backgroundTint="@android:color/holo_orange_light"
                android:elevation="2dp"
                android:fontFamily="@font/futura_medium"
                android:gravity="center"
                android:hint="@string/note_title"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corners_text_view"
                android:elevation="2dp"
                android:fontFamily="@font/futura_book"
                android:gravity="start"
                android:hint="@string/description"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>